[gd_scene load_steps=20 format=3 uid="uid://be8mvvxelw7f2"]

[ext_resource type="Script" uid="uid://chadc50yvxd7h" path="res://scenes/models/player/player.gd" id="1_2s625"]
[ext_resource type="Texture2D" uid="uid://b3c5ruwhmbir3" path="res://scenes/models/player/player.png" id="2_nu12e"]
[ext_resource type="PackedScene" uid="uid://cimvxxl6pjyt0" path="res://scenes/nodes/models/radial_light/radial_light.tscn" id="3_w3f5t"]
[ext_resource type="PackedScene" uid="uid://cdwgfsfnysr8b" path="res://scenes/nodes/models/body/body.tscn" id="4_gif1i"]
[ext_resource type="PackedScene" uid="uid://cctv8e2rhaaqw" path="res://scenes/nodes/models/cone_light/cone_light.tscn" id="4_j1jpt"]
[ext_resource type="AudioStream" uid="uid://b82wlo0ut7rxv" path="res://scenes/models/player/shields.wav" id="5_gif1i"]
[ext_resource type="AudioStream" uid="uid://dvwors8me5xmg" path="res://scenes/models/player/shoot.wav" id="5_rt5ve"]
[ext_resource type="AudioStream" uid="uid://c7sempwl25vac" path="res://scenes/models/player/take.wav" id="6_eunhc"]
[ext_resource type="AudioStream" uid="uid://cyte5dpd1jwp7" path="res://scenes/models/player/strike.wav" id="8_mfhbk"]
[ext_resource type="AudioStream" uid="uid://djm66wfa643j1" path="res://scenes/models/player/win.wav" id="9_q8uay"]
[ext_resource type="AudioStream" uid="uid://bw8c5dn87rad8" path="res://scenes/models/player/hit.wav" id="11_gif1i"]
[ext_resource type="AudioStream" uid="uid://2ybg6ktnlbrn" path="res://scenes/models/player/dead.wav" id="12_nnqyq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5kn0q"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qapn6"]
radius = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bc6ba"]
radius = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gif1i"]
radius = 32.0

[sub_resource type="Gradient" id="Gradient_q8uay"]
offsets = PackedFloat32Array(0.412587, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_gif1i"]
offsets = PackedFloat32Array(0.487544, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_mfhbk"]
points = PackedVector2Array(800, 128, 896, 0, 800, -128, 0, -16, 0, 16)

[node name="Player" type="AnimatableBody2D"]
collision_mask = 24
script = ExtResource("1_2s625")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5kn0q")

[node name="CollectRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectRange"]
shape = SubResource("CircleShape2D_qapn6")

[node name="ShieldRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldRange"]
shape = SubResource("CircleShape2D_bc6ba")

[node name="HitRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRange"]
shape = SubResource("CircleShape2D_gif1i")
debug_color = Color(0.970797, 0.147775, 0.223775, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nu12e")

[node name="Body" parent="." instance=ExtResource("4_gif1i")]
_hp = 320
_min_hp = 80
_max_hp = 320

[node name="ShieldMarkers" type="Node2D" parent="."]

[node name="Shield1Marker2D1" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(4, -24)

[node name="Shield1Marker2D2" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(10, -18)

[node name="Shield1Marker2D3" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(17, -11)

[node name="Shield1Marker2D4" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(24, -4)

[node name="Shield2Marker2D1" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(4, 24)

[node name="Shield2Marker2D2" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(10, 18)

[node name="Shield2Marker2D3" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(17, 11)

[node name="Shield2Marker2D4" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(24, 4)

[node name="Shield3Marker2D1" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-4, 24)

[node name="Shield3Marker2D2" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-10, 18)

[node name="Shield3Marker2D3" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-17, 11)

[node name="Shield3Marker2D4" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-24, 4)

[node name="Shield4Marker2D1" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-4, -24)

[node name="Shield4Marker2D2" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-10, -18)

[node name="Shield4Marker2D3" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-17, -11)

[node name="Shield4Marker2D4" type="Marker2D" parent="ShieldMarkers"]
position = Vector2(-24, -4)

[node name="ExplodeParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 1024
texture = ExtResource("2_nu12e")
lifetime = 4.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
fixed_fps = 60
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 64.0
initial_velocity_max = 256.0
orbit_velocity_min = -2.0
orbit_velocity_max = 2.0
tangential_accel_min = -50.0
tangential_accel_max = 50.0
scale_amount_min = 0.05
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_q8uay")

[node name="HiiParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
texture = ExtResource("2_nu12e")
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 64.0
initial_velocity_max = 196.0
scale_amount_min = 0.08
scale_amount_max = 0.16
color_ramp = SubResource("Gradient_gif1i")

[node name="BulletMarker2D" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_mfhbk")
target_position = Vector2(0, 0)
collision_mask = 2

[node name="ConeLight" parent="." instance=ExtResource("4_j1jpt")]

[node name="RadialLight" parent="." instance=ExtResource("3_w3f5t")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(196, 0)
position_smoothing_enabled = true
position_smoothing_speed = 1.5
rotation_smoothing_speed = 1.0

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShieldTimer" type="Timer" parent="."]

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rt5ve")

[node name="ShieldAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gif1i")
volume_db = -8.0

[node name="TakeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eunhc")
volume_db = -2.0

[node name="StrikeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_mfhbk")
volume_db = -10.0

[node name="WinAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_q8uay")
volume_db = 4.0

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_gif1i")
volume_db = -2.0

[node name="DeadAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_nnqyq")
volume_db = 4.0

[connection signal="body_entered" from="CollectRange" to="." method="_on_collect_range_body_entered"]
[connection signal="body_exited" from="CollectRange" to="." method="_on_collect_range_body_exited"]
[connection signal="body_entered" from="ShieldRange" to="." method="_on_shield_range_body_entered"]
[connection signal="body_exited" from="ShieldRange" to="." method="_on_shield_range_body_exited"]
[connection signal="body_entered" from="HitRange" to="." method="_on_hit_range_body_entered"]
